<resources>
    <string name="app_name">轻途</string>
    <string name="title_home">首页</string>
    <string name="title_browse">目的地</string>
    <string name="title_destination">攻略库</string>
    <string name="title_order">行程</string>
    <string name="title_personer">我的</string>
    <string name="menu_1">周边游</string>
    <string name="menu_2">一日游</string>
    <string name="menu_3">自由行</string>
    <string name="menu_4">景点·门票</string>
    <string name="menu_5">浪漫之旅</string>
    <string name="menu_6">当地向导</string>
    <string name="menu_7">定制旅行</string>
    <string name="menu_8">亲子·游学</string>
    <string name="showNearby">看看附近有什么~~~</string>
    <string name="nearby_activity_title">NCVT</string>
    <string name="exhibition_area_1">展览区一</string>
    <string name="exhibition_area_2">展览区二</string>
    <string name="exhibition_area_3">展览区三</string>
    <string name="exhibition_area_4">展览区四</string>
    <string name="exhibition_area_5">展览区五</string>
    <string name="exhibition_area_6">展览区六</string>
    <string name="conference_hall">会议厅</string>
    <string name="top_10">Top 10</string>
    <string-array name="exhibition_area">
        <item>展览区一</item>
        <item>展览区二</item>
        <item>展览区三</item>
        <item>展览区四</item>
        <item>展览区五</item>
        <item>展览区六</item>
    </string-array>
    <string name="exhibition_area_name">软件技术专业</string>
    <string name="exhibits_name">旅游App</string>
    <string name="exhibits_author">小组组长：</string>
    <string name="guidance_teacher">指导老师：</string>
    <string name="exhibits_comment_count">条评论</string>
    <string name="likeCount">人喜欢</string>
    <string name="team_members">小组成员：</string>
    <string name="cell_phone_number">联系方式：</string>
    <string-array name="tab_item">
        <item>评论榜</item>
        <item>喜欢榜</item>
    </string-array>
    <string name="notice">热烈欢迎XXX领导！！！   热烈欢迎XXX领导！！！   热烈欢迎XXX领导！！！   热烈欢迎XXX领导！！！</string>
    <string name="exhibits_detial">作品详情</string>
    <string name="comment_count">用户评价</string>
    <string name="send_comment">发送</string>
    <string name="default_text">点我发弹幕哦！</string>
    <string name="no_more">没有更多了~~~</string>
    <string name="tourism_details_content">我已阅读并接受《合同条款、补充条款及其他所有内容》阅读《轻途网旅游安全手册》、《发票信息说明》</string>
    <string name="tourism_details_smbol">¥</string>
    <string name="tourism_details_price">2250</string>
    <string name="tourism_details_everyone">起/人</string>
    <string name="tourism_details_cash">现金红包</string>
    <string name="tourism_details_vip">专享红包</string>
    <string name="tourism_details_voucher">代金券</string>
    <string name="tourism_details_shop">店铺红包</string>
    <string name="tourism_details_explain">您有6张店铺红包未领取</string>
    <string name="tourism_details_luxury">豪华游</string>
    <string name="tourism_details_expense">无自费</string>
    <string name="tourism_details_shopping">无购物</string>
    <string name="tourism_details_Ironclad">铁定成团</string>
    <string name="tourism_details_date">更多日期</string>
    <string name="tourism_details_cost">费用信息</string>
    <string name="tourism_details_trip">行程信息</string>
    <string name="tourism_details_line">线路特色</string>
    <string name="tourism_details_reserve">预定通知</string>
    <string name="tourism_details_traffic">参考交通</string>
    <string name="tourism_details_tv_trip">行程天数</string>
    <string name="tourism_details_tv_arrive">出发到达</string>
    <string name="tourism_details_tv_stay">住宿标准</string>
    <string name="tourism_details_add_trip">加入行程</string>
    <string name="tourism_details_reserves">立即预定</string>
    <string name="tourism_cost_information_title1">费用包含</string>
    <string name="tourism_cost_information_content1">【交通】 \n 含出发地至长沙往返高铁/动车二等坐票 \n 【接送服务】 \n 含高铁至酒店，24小时接送服务 \n 【住宿】 \n 含2晚长沙市中心- 【万家丽国际大酒店】酒店以欧陆古典风情结合中式风格，打造独有的文化类豪华五星酒店，且酒店出门就是地铁站，2号线可直达五一广场、梅溪湖 \n 【用餐】\n 酒店含早餐2份/房/天 \n 【保险】含旅行社责任险，人身意外险，一人一份； \n 【赠送】\n ⭐️ 赠送网红"文和友老长沙龙虾馆"快速通道，爱吃族最爱！ \n 【其他】 如需增加套餐天数或减少/更换酒店/更换门票/增加用车等其他需求，可联系客服定制或沟通。</string>
    <string name="tourism_cost_information_title2">费用不含</string>
    <string name="tourism_cost_information_content2">【不可抗力】 \n 因交通延阻、罢工、天气、飞机、机器故障、航班取消或更改时间等原因所导致的额外费用 \n 【单差房】 \n 自由行酒店不允许拼房，单人入住需补房差 \n 【保险】 \n 航空意外险、航空延误险，为了您的权益，根据自身需要选择 \n 【其它】 \n 以上"费用包含"中未注明的其它项目费用</string>
    <string name="tourism_cost_information_title3">儿童说明</string>
    <string name="tourism_cost_information_content3">1、3-12岁（1.12米以下）含往返机票、门票、车位费</string>
    <string name="tourism_cost_information_title4">老人说明</string>
    <string name="tourism_cost_information_content4">1、此产品预定出行人需确保身体健康适宜旅游，如出行人中有70周岁（含）以上老人，必须至少各有一位20周岁-55周岁亲友陪同方可预订出行。敬请谅解！</string>
    <string name="tourism_cost_reserve_title1">出行须知</string>
    <string name="tourism_cost_reserve_content1">1、【重要说明】如遇政府接待、酒店会议及其它特殊原因导致无房状态，我社有权给您安排，同级同性价酒店，并会提前告知您，请您谅解。 \n 2、【单方差】本产品是按照2成人入住一间房间计算的价格，不接受拼房，如出现单男单女请补交单房差。 \n 3、【酒店退改】因酒店房间预订是以款到方确定留房。您的订单一经预订交易成功后，我社第一时间打款留房。酒店不可变更及取消，请知晓。\n 4、【关于退改】机票一经出票，均不能退票及改签。 \n 5、【关于发票】提供发票票种为旅行社服务发票。（金额不含当地消费、自理项目）。无法提供当地住宿、餐饮、车票等成本发票；如需发票的请提前联系客服，留言备注或拨打客服电话、行程结束后一周内可索取来电要求旅行社发票。 \n 6、【其它说明】若无房无车导致无法正常安排，在您未验证消费码之前会告知您，我们仅做订单退款，不做赔偿，请悉知。</string>
    <string name="tourism_cost_reserve_title2">温馨提示</string>
    <string name="tourism_cost_reserve_content2">1、在您进行旅游活动前，请先参考当地天气预报情况及其他专业人士或机构的的相关建议和公告。 \n 2、为了不耽误您的行程，建议您在出发前120分钟到达机场办理登机＆相关手续。 \n 3、接送机师傅一般会提前3小时与您联系，确认具体的时间和地点。 \n 4、酒店须在14:00后方能办理入住，在12:00之前退房，如需延迟至14点退房，请提前联系客服尽量给您争取。 \n 5、成人务请携带有效身份证件、18周岁以下小孩带户口本（原件）出行游玩，因没带证件出行可能会导致无法进入景区或入住，损失自费，请知晓。 \n 6、在您下单后，客服会给您提供相关的推荐游玩攻略，方便您进行更好的游玩，在此中旅集团私人定制中心祝您旅途愉快。</string>
    <string name="tourism_cost_reserve_title3">退款说明</string>
    <string name="tourism_cost_reserve_content3">【旅游者违约】\n 合同生效后如需取消、退订，将按您所订资源实际产生损失收取费用 \n【供应商违约】 \n 在规定时间内违约，除退还全额旅游费用外，另支付违约金比例如下： \n 行程开始前4-7日，退还全额旅游费用，支付旅游费用总额10%的违约金。 \n 行程开始前1-3日，退还全额旅游费用，支付旅游费用总额15%的违约金。 \n 行程开始当日，退还全额旅游费用，支付旅游费用总额20%的违约金。 \n 如按上述比例支付的违约金不足以赔偿旅游者的实际损失，旅行社应当按实际损失对旅游者予以赔偿。 </string>
    <string name="tourism_cost_instructions_title1">使用说明</string>
    <string name="tourism_cost_instructions_content1">【出团信息】 \n 商家会在出游前1天的23点前与您确认出团信息。若您超过此时间预订，则工作时间（06:00:00-19:59:59）商家会在120分钟内发送出团通知；非工作时间（20:00:00-05:59:59）商家会在您出行前120分钟内发送出团通知。 \n \n 【预订须知】 \n 温馨提示：赠送的代金券仅适用于我社产品使用，详情咨询客服！ \n 1、此行程不含从景区回出发地的返程，预定时请注意。 \n 2、漓江杨堤九马竹筏都是桂林出发；兴坪竹筏/游船的行程桂林/阳朔都可以出发； \n 3、2019年9月1日至10月31日将对兴坪“渔村游”游码头进行提档升级改建，届时将全面停用“渔村游”码头。兴坪游船的行程航线为朝板山码头至渔村（往返），兴坪竹筏的行程航线为马山码头至朝板山水域（往返） \n 4.2人拼车的商务团如当天无法成团，可以退差价改大巴车行程或者补车位费单独包车。\n \n 【使用说明】 \n 集合时间： 仅供参考，以导游提前一天22:30前通知为准。\n \n 【产品说明】 \n 集合时间：以导游通知为准，行程时间仅供参考； \n 杨堤竹筏游览景点：漓江竹筏精华游（杨堤-九马段），凭竹筏票免费乘电瓶车，途经兴坪古镇和20元人民币背景； \n 兴坪竹筏游览景点：兴坪朝板山码头-马山码头，乘竹筏观20元背景拍摄地，远观九马画山； 兴坪游船游览景点：兴坪渔村游，游览兴坪佳境、朝板山、螺丝山等。</string>
    <string name="tourism_order_calendar_title">选择日期/出行人数</string>
    <string name="tourism_order_calendar_trip_number">请选择出行人数</string>
    <string name="tourism_order_calendar_adult">成人</string>
    <string name="tourism_order_calendar_children">儿童</string>
    <string name="tourism_order_calendar_add">＋</string>
    <string name="tourism_order_calendar_reduce">－</string>
    <string name="tourism_order_calendar_completion_order">下一步，填写订单</string>
    <string name="tourism_order_calendar_determine">确定</string>
    <string name="tourism_order_completion_title">订单填写</string>
    <string name="tourism_order_date_place_days">2019年10月28日 南宁出发 3天2晚</string>
    <string name="tourism_order_room_difference">房差</string>
    <string name="tourism_order_contacts">联系人</string>
    <string name="tourism_order_choice_contacts">选择联系人</string>
    <string name="tourism_order_scan_documents">扫描证件</string>
    <string name="tourism_order_manually"> 手动填写</string>
    <string name="tourism_order_name">姓名</string>
    <string name="tourism_order_name_content">必填，用于供应商与您联系</string>
    <string name="tourism_order_phone">手机</string>
    <string name="tourism_order_phone_content">必填，用于接收订单确认信息</string>
    <string name="tourism_order_qq">QQ号</string>
    <string name="tourism_order_qq_content">选填，请输入QQ号</string>
    <string name="tourism_order_wechat">微信号</string>
    <string name="tourism_order_wechat_content">选填，请输入微信号</string>
    <string name="tourism_order_trip">出行人</string>
    <string name="tourism_order_choice_trip">选择出行人</string>
    <string name="tourism_order_trip_name">成人</string>
    <string name="tourism_order_trip_name_content">请务必保证所填项与出游所持证件一致</string>
    <string name="tourism_order_discount">使用优惠</string>
    <string name="tourism_order_nothing_discount">没有可用的优惠</string>
    <string name="tourism_order_special_requirements">是否有特殊要求</string>
    <string name="tourism_order_requirements">请在此处写明您的特殊要求</string>
    <string name="tourism_order_complete">完成</string>
    <string name="tourism_order_payment_title">确认订单</string>
    <string name="tourism_order_payment_number">订单号：</string>
    <string name="tourism_order_payment_date">出行时间</string>
    <string name="tourism_order_payment_trip_number">出行人数</string>
    <string name="tourism_remark">备注</string>
    <string name="tourism_order_adult_cost">成人费用：</string>
    <string name="tourism_order_adult_cost1">¥1999*2</string>
    <string name="tourism_order_children_cost">儿童费用：</string>
    <string name="tourism_order_children_cost1">¥199*2</string>
    <string name="tourism_order_coupon">优惠卷：</string>
    <string name="tourism_order_coupon_price">-30</string>
    <string name="tourism_order_price">¥4999</string>
    <string name="tourism_order_cancel">取消</string>
    <string name="tourism_order_payment">支付</string>
    <string name="tourism_order_paymentq">去支付</string>
    <string name="tourism_order_details">查看详情</string>
    <string name="tourism_order_cancel1">取消支付</string>
    <string name="tourism_order_payment1">立即支付</string>
    <string name="tourism_order_cancel_title">取消订单</string>
    <string name="tourism_order_cancel_reason">请选择取消订单的原因（必选）：</string>
    <string name="tourism_order_cancel_content1">不想要了</string>
    <string name="tourism_order_cancel_content2">商品信息填写错误</string>
    <string name="tourism_order_cancel_content3">地址信息填写错误</string>
    <string name="tourism_order_cancel_content4">商品降价</string>
    <string name="tourism_order_cancel_content5">其他</string>
    <string name="tourism_order_cancel_commit">提交</string>
    <string name="tourism_all_order_title">度假旅游/团购订单</string>
    <string name="common_input_pwd_title">请输入支付密码</string>
    <string name="common_withdraw_prompt1">提现成功后，</string>
    <string name="common_withdraw_prompt2">个工作日之内钱款会打到您的微信钱包</string>
    <string name="common_cancel">取消</string>
    <string name="common_certain">确定</string>
    <string name="common_choose_month">选择月份</string>
    <string name="common_pay_info">付款详情</string>
    <string name="common_cn_yuan">元</string>
    <string name="common_need_to_pay">需要支付的金额</string>
    <string name="common_wx_pay">微信支付</string>
    <string name="common_wx_pay_context">推荐安装微信的用户使用</string>
    <string name="common_ali_pay">支付宝支付</string>
    <string name="common_ali_pay_context">推荐安装支付宝的用户使用</string>
    <string name="common_balance_pay">余额支付</string>
    <string name="common_balance_pay_context">使用现金余额支付，当前支付密码为 111111</string>
    <string name="common_balance_not_enough_context">余额不足，当前余额</string>
    <string name="common_pay">确认付款</string>
    <string name="tourism_strategy_details_title">攻略详情</string>
    <string name="title_personal_data">个人资料</string>
    <string name="title_personal_coupon">我的度假优惠卷</string>
    <string name="title_personal_collection">我的收藏</string>
    <string name="title_personal_hoilday_problem">度假问题</string>
    <string name="title_personal_subscriptions">我的订阅</string>
    <string name="title_personal_member">爱旅行VIP会员</string>
    <string name="title_personal_member_shop">兑换会员</string>
    <string name="tourism_order_cancel_productname">产品名称</string>
    <string name="tourism_order_cancel_tripmode">出行方式</string>
    <string name="tourism_order_cancel_departureperiod">出发团期</string>
    <string name="tourism_order_cancel_amountpayable">应付金额</string>
    <string name="tourism_seach_cancel">取消</string>
</resources>