<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tourism.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.tourism.ui.fragment.DestinationFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_destination"
        android:name="com.example.tourism.ui.fragment.BrowseFragment"
        android:label="@string/title_destination"
        tools:layout="@layout/fragment_destination" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.tourism.ui.fragment.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_personer"
        android:name="com.example.tourism.ui.fragment.PersonerFragment"
        android:label="@string/title_personer"
        tools:layout="@layout/fragment_personer" />

</navigation>