<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_reserve_title1"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/color_black_2c"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_reserve_content1"
                android:textSize="14sp"
                android:gravity="left"
                android:padding="10dp"
                android:textColor="@color/color_black_2c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_reserve_title2"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/color_black_2c"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_reserve_content2"
                android:textSize="14sp"
                android:gravity="left"
                android:padding="10dp"
                android:textColor="@color/color_black_2c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_reserve_title3"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/color_black_2c"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_reserve_content3"
                android:textSize="14sp"
                android:gravity="left"
                android:padding="10dp"
                android:textColor="@color/color_black_2c" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>