<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="交通信息"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_black_2c"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="交通住宿仅供参考，具体信息可咨询商家"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/color_dark_grey"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_title1"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/color_black_2c"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_content1"
                android:textSize="14sp"
                android:gravity="left"
                android:padding="10dp"
                android:textColor="@color/color_black_2c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_title2"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/color_black_2c"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_content2"
                android:textSize="14sp"
                android:gravity="left"
                android:padding="10dp"
                android:textColor="@color/color_black_2c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_title3"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/color_black_2c"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_content3"
                android:textSize="14sp"
                android:gravity="left"
                android:padding="10dp"
                android:textColor="@color/color_black_2c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_title4"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/color_black_2c"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourism_cost_information_content4"
                android:textSize="14sp"
                android:gravity="left"
                android:padding="10dp"
                android:textColor="@color/color_black_2c"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>